update booking service
